# agent-debugger-and-visualizer

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yaml
backend/: Dockerfile  critic_worker.py  main.py  redis_subscriber.py  requirements.txt  run_manager.py  state_delta_engine.py  ws_manager.py
backend/api/: builder.py  interrupt.py  runs.py
frontend/: next.config.mjs  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/builder/: page.tsx
frontend/components/: BuilderCanvas.tsx  BuilderNode.tsx  CriticPanel.tsx  DagCanvas.tsx  DagNode.tsx  DashboardClient.tsx  EventLog.tsx  FlameGraph.tsx  InterruptBanner.tsx  StateInspector.tsx
frontend/hooks/: useWebSocket.ts
frontend/lib/: pricing.ts  schema.ts
frontend/store/: useRunStore.ts
instrumentation/: __init__.py  components.py  diff_engine.py  dynamic_graph.py  example_agent.py  probe.py  redis_emitter.py  requirements.txt
shared/schema/: trace_event.py  trace_event.ts
