[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-debugger"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "redis>=5.0.3",
    "jsonpatch>=1.33",
    "pydantic>=2.7.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "python-dotenv>=1.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "instrumentation*", "backend*"]
